# docs/swagger.json
@@ -9,8 +9,60 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/auth/change-password": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Change password",
+                "parameters": [
+                    {
+                        "description": "Change password",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.ChangePasswordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "If logoutAllDevices=true, returns new tokens",
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.TokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
+                "security": [
+                    {
+                        "DeviceID": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -22,12 +74,6 @@
                 ],
                 "summary": "Login",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Device ID",
-                        "name": "X-Device-Id",
-                        "in": "header"
-                    },
                     {
                         "description": "Login",
                         "name": "body",
@@ -59,6 +105,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -86,6 +135,11 @@
         },
         "/auth/refresh": {
             "post": {
+                "security": [
+                    {
+                        "DeviceID": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -97,12 +151,6 @@
                 ],
                 "summary": "Refresh token",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Device ID",
-                        "name": "X-Device-Id",
-                        "in": "header"
-                    },
                     {
                         "description": "Refresh token",
                         "name": "body",
@@ -131,6 +179,11 @@
         },
         "/auth/register": {
             "post": {
+                "security": [
+                    {
+                        "DeviceID": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -165,11 +218,50 @@
                 }
             }
         },
+        "/permissions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Permissions"
+                ],
+                "summary": "List all permissions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/gin-boilerplate_internal_iam_dto.PermissionResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin-boilerplate_pkg_response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/roles": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -201,6 +293,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -245,6 +340,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -282,6 +380,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -331,6 +432,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -373,6 +477,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -417,6 +524,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -461,6 +571,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -504,6 +617,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -559,6 +675,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -607,6 +726,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -651,6 +773,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -695,6 +820,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -732,6 +860,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "consumes": [
@@ -781,6 +912,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "DeviceID": []
                     }
                 ],
                 "produces": [
@@ -820,6 +954,24 @@
         }
     },
     "definitions": {
+        "gin-boilerplate_internal_iam_dto.ChangePasswordRequest": {
+            "type": "object",
+            "required": [
+                "newPassword",
+                "oldPassword"
+            ],
+            "properties": {
+                "logoutOtherDevices": {
+                    "type": "boolean"
+                },
+                "newPassword": {
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "type": "string"
+                }
+            }
+        },
         "gin-boilerplate_internal_iam_dto.CreateRoleRequest": {
             "type": "object",
             "required": [
@@ -870,7 +1022,6 @@
         "gin-boilerplate_internal_iam_dto.LoginRequest": {
             "type": "object",
             "required": [
-                "email",
                 "password"
             ],
             "properties": {
@@ -920,17 +1071,14 @@
         },
         "gin-boilerplate_internal_iam_dto.RegisterRequest": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 2
                 },
                 "password": {
                     "type": "string"
@@ -1141,6 +1289,12 @@
             "description": "Enter \"Bearer {token}\"",
             "type": "apiKey",
             "name": "Authorization",
+            "in": "header"
+        },
+        "DeviceID": {
+            "description": "Device identifier",
+            "type": "apiKey",
+            "name": "X-Device-Id",
             "in": "header"
         }
     }
